WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
313729
Fix SVG pathLength="0" and negative pathLength handling for stroke dashing
https://bugs.webkit.org/show_bug.cgi?id=313729
Summary
Fix SVG pathLength="0" and negative pathLength handling for stroke dashing
Ahmad Saleem
Reported
2026-04-30 02:58:42 PDT
It is to align our implementation with
https://w3c.github.io/svgwg/svg2-draft/paths.html#PathLengthAttribute
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-04-30 02:58:49 PDT
<
rdar://problem/175928827
>
Ahmad Saleem
Comment 2
2026-04-30 03:01:40 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/63962
EWS
Comment 3
2026-05-27 14:49:49 PDT
Committed
314001@main
(40238a317bef): <
https://commits.webkit.org/314001@main
> Reviewed commits have been landed. Closing PR #63962 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug